--- a/src/System.Image/System.Image.vcxproj.filters
+++ b/src/System.Image/System.Image.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="GrayImage.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Solver.cpp">
+    <ClCompile Include="ConfigAndData.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
