--- a/src/ExperimentCPP/ExperimentCPP.vcxproj
+++ b/src/ExperimentCPP/ExperimentCPP.vcxproj
@@ -152,6 +152,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CrossValidation.hpp" />
     <ClInclude Include="LDPPI.h" />
     <ClInclude Include="MNIST.h" />
     <ClInclude Include="Test.h" />
