--- a/src/ExperimentCPP/ExperimentCPP.vcxproj.filters
+++ b/src/ExperimentCPP/ExperimentCPP.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="MNIST.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CrossValidation.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
