--- a/src/System.Image/System.Image.vcxproj.filters
+++ b/src/System.Image/System.Image.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="ConfigAndData.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="EdgeMatch.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EdgeMatching.h">
