--- a/src/ExperimentCPP/ExperimentCPP.vcxproj
+++ b/src/ExperimentCPP/ExperimentCPP.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Runner.py" />
     <None Include="Scatter.py" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
