Add some test codes.

--- a/src/System.Image/System.Image.vcxproj.filters
+++ b/src/System.Image/System.Image.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="EdgeMatch.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Core.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Eigen.h">
