--- a/src/ExperimentCPP/ExperimentCPP.vcxproj
+++ b/src/ExperimentCPP/ExperimentCPP.vcxproj
@@ -74,8 +74,8 @@
     <OutDir>..\..\bin\</OutDir>
     <IntDir>obj\</IntDir>
     <ExecutablePath>D:\Develop\opencv\build\x64\vc11\bin;$(VCInstallDir)bin\x86_amd64;$(VCInstallDir)bin;$(WindowsSDK_ExecutablePath_x86);$(VSInstallDir)Common7\Tools\bin;$(VSInstallDir)Common7\tools;$(VSInstallDir)Common7\ide;$(ProgramFiles)\HTML Help Workshop;$(MSBuildToolsPath32);$(FxCopDir);$(PATH);</ExecutablePath>
-    <IncludePath>D:\Develop\opencv\build\include;D:\Develop\opencv\build\include\opencv;D:\Develop\opencv\build\include\opencv2;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath);</IncludePath>
-    <LibraryPath>D:\Develop\tbb\lib\intel64\vc11;..\..\lib;D:\Develop\opencv\build\x64\vc11\lib;$(VCInstallDir)lib\amd64;$(VCInstallDir)atlmfc\lib\amd64;$(WindowsSDK_LibraryPath_x64);</LibraryPath>
+    <IncludePath>D:\Develop\HDF5\include;D:\Develop\MATLAB\R2012b\extern\include;D:\Develop\opencv\build\include;D:\Develop\opencv\build\include\opencv;D:\Develop\opencv\build\include\opencv2;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>D:\Develop\HDF5\lib;D:\Develop\MATLAB\R2012b\extern\lib\win64\microsoft;D:\Develop\tbb\lib\intel64\vc11;..\..\lib;D:\Develop\opencv\build\x64\vc11\lib;$(VCInstallDir)lib\amd64;$(VCInstallDir)atlmfc\lib\amd64;$(WindowsSDK_LibraryPath_x64);</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -85,8 +85,8 @@
     <OutDir>..\..\bin\</OutDir>
     <IntDir>obj\</IntDir>
     <ExecutablePath>D:\Develop\opencv\build\x64\vc11\bin;$(VCInstallDir)bin\x86_amd64;$(VCInstallDir)bin;$(WindowsSDK_ExecutablePath_x86);$(VSInstallDir)Common7\Tools\bin;$(VSInstallDir)Common7\tools;$(VSInstallDir)Common7\ide;$(ProgramFiles)\HTML Help Workshop;$(MSBuildToolsPath32);$(FxCopDir);$(PATH);</ExecutablePath>
-    <IncludePath>D:\Develop\opencv\build\include;D:\Develop\opencv\build\include\opencv;D:\Develop\opencv\build\include\opencv2;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath);</IncludePath>
-    <LibraryPath>D:\Develop\tbb\lib\intel64\vc11;..\..\lib;D:\Develop\opencv\build\x64\vc11\lib;$(VCInstallDir)lib\amd64;$(VCInstallDir)atlmfc\lib\amd64;$(WindowsSDK_LibraryPath_x64);</LibraryPath>
+    <IncludePath>D:\Develop\HDF5\include;D:\Develop\MATLAB\R2012b\extern\include;D:\Develop\opencv\build\include;D:\Develop\opencv\build\include\opencv;D:\Develop\opencv\build\include\opencv2;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>D:\Develop\HDF5\lib;D:\Develop\MATLAB\R2012b\extern\lib\win64\microsoft;D:\Develop\tbb\lib\intel64\vc11;..\..\lib;D:\Develop\opencv\build\x64\vc11\lib;$(VCInstallDir)lib\amd64;$(VCInstallDir)atlmfc\lib\amd64;$(WindowsSDK_LibraryPath_x64);</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -148,7 +148,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>System.lib;System.Image.lib;System.XML.lib;System.ML.lib;opencv_core243.lib;opencv_highgui243.lib;opencv_imgproc243.lib;opencv_contrib243.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>hdf5.lib;hdf5_cpp.lib;libmat.lib;libmx.lib;libmex.lib;libeng.lib;System.lib;System.Image.lib;System.XML.lib;System.ML.lib;opencv_core243.lib;opencv_highgui243.lib;opencv_imgproc243.lib;opencv_contrib243.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
